--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ APP_SECRET=
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=
+MESSENGER_TRANSPORT_DSN=doctrine://default
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
